# OptiQual3D

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: default.yaml  evaluate.yaml  pretrain.yaml  train.yaml
optiqual3d/: __init__.py
optiqual3d/config/: __init__.py  settings.py
optiqual3d/data/: __init__.py  anomaly_generation.py  augmentation.py  preprocessing.py
optiqual3d/data/datasets/: __init__.py  anomaly_shapenet.py  generated.py  mvtec3d.py  real3d.py  shapenet.py
optiqual3d/evaluation/: __init__.py  evaluator.py  metrics.py
optiqual3d/losses/: __init__.py  chamfer.py  combined.py  contrastive.py
optiqual3d/models/: __init__.py  anomaly_head.py  contrastive.py  decoder.py  encoder.py  optiqual.py
optiqual3d/training/: __init__.py  distributed.py  pretrain.py  train_anomaly.py
optiqual3d/utils/: __init__.py  checkpoint.py  logging.py  pointcloud_ops.py
optiqual3d/visualization/: __init__.py  renderer.py
scripts/: __init__.py  demo.py  evaluate.py  generate_data.py  pretrain.py  render.py  smoke_test.py  train.py
slurm/: evaluate.sbatch  generate_data.sbatch  pretrain.sbatch  smoke_test.sbatch  submit_train_jobs.sh  train.sbatch
